tests/idris2/error/perror037/expected
1/1: Building Issue3550 (Issue3550.idr)
Error: Couldn't parse any alternatives:
1: Expected 'case', 'if', 'do', application or operator expression.

Issue3550:2:19--2:20
 1 | CharacterExcept : Type
 2 | CharacterExcept = `Elem` _ . fst
                       ^
... (42 others)
1/1: Building Issue3739 (Issue3739.idr)
Error: Couldn't parse any alternatives:
1: Expected 'case', 'if', 'do', application or operator expression.

Issue3739:2:7--2:8
 1 | foo : Nat -> Nat
 2 | foo = `minus` 5
           ^
... (42 others)
